--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -189,21 +189,27 @@ footer {
 <nav>
 
 <div class="logo">
-
 📱 PhoneInfo
-
 </div>
 
 <div class="nav-links">
 
 <a href="/">Home</a>
+
 <a href="/about/">About</a>
 
 {% if user.is_authenticated %}
-<a href="/logout/">Logout</a>
+
+<a href="{% url 'profile' %}">Profile</a>
+
+<a href="{% url 'logout' %}">Logout</a>
+
 {% else %}
-<a href="/login/">Login</a>
-<a href="/signup/">Sign Up</a>
+
+<a href="{% url 'login' %}">Login</a>
+
+<a href="{% url 'signup' %}">Sign Up</a>
+
 {% endif %}
 
 </div>
