--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -198,6 +198,8 @@ footer {
 
 <a href="/about/">About</a>
 
+<a href="{% url 'contact' %}">Contact</a>
+
 {% if user.is_authenticated %}
 
 <a href="{% url 'profile' %}">Profile</a>
