UI enhancements and add pfp section

--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -114,7 +114,9 @@ It helps users instantly find important details about any phone number.
 </div>
 
 <div class="about-footer">
-Secure • Fast • Reliable • Built with Django
+    <p> 👨‍💻 About the Developer<br>
+Developed by Pranav and Hardik. This project demonstrates how Django can be used to create practical web applications.</p><br>
+Secure • Fast • Reliable • Built with Django 
 </div>
 
 </div>
